Layout improvements for the dataset summary section (above-the-tabs metadata) to be more consistent with the layout of the metadata in the tab. Removed repetitive metadata lables for multivalue fields. Fixed layout issue with the select dropdown menus.

--- a/src/main/webapp/resources/css/structure.css
+++ b/src/main/webapp/resources/css/structure.css
@@ -193,9 +193,13 @@ span[id$='editDataSet'] .ui-button-text {white-space: nowrap;}
 
 div.form-group .glyphicon.glyphicon-asterisk {font-size:.5em; vertical-align:text-top;}
 #datasetForm .form-group {overflow: hidden;}
-#datasetForm .form-group .col-sm-9 .col-sm-9, #datasetForm .form-group .col-sm-7 .col-sm-6, #datasetForm .form-group .col-sm-7 .col-sm-12 {padding-left:0;}
+#datasetForm .form-col-container .form-col-container {padding-left:0;}
+#datasetForm .form-col-container .form-col-container .ui-selectonemenu {display:block;}
 
-#datasetForm div.ui-selectonemenu.form-control {padding:1px;}
+#datasetForm div.ui-selectonemenu.form-control {padding:0px;} /* Primefaces vs Bootstrap selectOneMenu fix */
+#datasetForm .form-col-container .form-col-container .ui-selectonemenu .ui-selectonemenu-label {padding:6px 4px;}
+#datasetForm .form-col-container .form-col-container .ui-selectonemenu .ui-selectonemenu-trigger {border-radius:0; width:24px;}
+#datasetForm .form-col-container .form-col-container .ui-selectonemenu .ui-selectonemenu-trigger .ui-icon {margin-top:6px;}
 
 #datasetForm .select-scroll-block {height:auto; max-height:120px; overflow-y:scroll; padding: 6px 12px;}
 #datasetForm .select-scroll-block table.ui-selectmanycheckbox label {margin-left:5px; margin-top:0; font-weight:normal;}
